Added meta data

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+
+  <meta name="keywords" content="Portfolio, developer, software, engineer, jaime, moncayo,freelancer">
+  <meta name="description" content="The developer porfolio website for Jaime Moncayo">
+  <meta name="author" content="Jaime Moncayo">
+
   <!-- Load jQuery First -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Fonts -->
@@ -19,8 +24,11 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-    crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+
+
   <meta charset="utf-8">
   <!-- Chrome -->
   <meta name="theme-color" content="#000000">
