--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="The developer porfolio website for Jaime Moncayo">
   <meta name="author" content="Jaime Moncayo">
 
-  <!-- Load jQuery First -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
@@ -42,8 +41,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
+  <!-- Load jQuery First -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
