--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,6 @@
   <meta name="description" content="The developer porfolio website for Jaime Moncayo">
   <meta name="author" content="Jaime Moncayo">
 
-
-  <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Ranga" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
@@ -52,6 +36,24 @@
   </app-root>
 
   <noscript>Please enable Javascript</noscript>
+
+
+  <style>
+    @import "https://fonts.googleapis.com/css?family=Open+Sans";
+    @import "https://fonts.googleapis.com/css?family=Pacifico";
+    @import "https://fonts.googleapis.com/css?family=Patua+One";
+    @import "https://fonts.googleapis.com/css?family=Rajdhani";
+    @import "https://fonts.googleapis.com/css?family=Rubik:900";
+    @import "https://fonts.googleapis.com/css?family=Bungee+Shade";
+    @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+    @import "https://fonts.googleapis.com/css?family=Roboto:300,400,500";
+    @import "https://fonts.googleapis.com/css?family=Do+Hyeon|Ranga";
+    @import "https://fonts.googleapis.com/css?family=Open+Sans";
+    @import "https://fonts.googleapis.com/css?family=Lobster+Two";
+    @import "https://fonts.googleapis.com/css?family=Lobster";
+    @import "https://fonts.googleapis.com/css?family=Roboto+Slab";
+    @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+  </style>
 </body>
 
 
