--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
 
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
   <meta charset="utf-8">
   <!-- Chrome -->
   <meta name="theme-color" content="#000000">
@@ -51,7 +49,6 @@
     @import "https://fonts.googleapis.com/css?family=Lobster";
     @import "https://fonts.googleapis.com/css?family=Roboto+Slab";
     @import "https://fonts.googleapis.com/icon?family=Material+Icons";
-
   </style>
 </body>
 
