added swipe gesture support

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,6 @@
     @import "https://fonts.googleapis.com/icon?family=Material+Icons";
   </style>
 </body>
-
-
+<!-- Hammer JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
 </html>
